--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "background_color": "#fff",
   "display": "standalone",
-  "homepage_url": "https://app.uniswap.org",
+  "homepage_url": "https://sengoku-swap.finance",
   "icons": [
     {
       "src": "./images/192x192_App_Icon.png",
@@ -17,8 +17,8 @@
     }
   ],
   "orientation": "portrait",
-  "name": "Uniswap",
-  "short_name": "Uniswap",
+  "name": "Sengoku Swap Finance",
+  "short_name": "SSF",
   "start_url": ".",
-  "theme_color": "#ff007a"
+  "theme_color": "#DDCCA0"
 }
